Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89740

[REG 5.15.1 -> 5.15.2] Visiting LinkedIn causes "Terminating renderer for bad IPC message"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.4
    • 5.15.2
    • WebEngine
    • None
    • 7194fa83055da3055000adf19b05328e7ccab38b (qt/qtwebengine/5.15)

      When visiting https://www.linkedin.com/ with simplebrowser on Qt 5.15.2, the login page results in a killed renderer process crash with:

      [55434:55434:1230/170945.951054:ERROR:render_process_host_impl.cc(5024)] Terminating render process for bad Mojo message: Received bad user message: No binder found for interface blink.mojom.InstalledAppProvider for the frame/document scope
      [55434:55434:1230/170945.951104:ERROR:bad_message.cc(27)] Terminating renderer for bad IPC message, reason 123
      

        For Gerrit Dashboard: QTBUG-89740
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes