Fix crash on linkedin.com

Disable the InstallApp feature, which we have disabled as it integrates
with the payment subsystem.

Fixes: QTBUG-89740
Change-Id: I212bad785294a70812385e96d5f7e300f5806f87
Reviewed-by: Michael Brüning <michael.bruning@qt.io>